--- a/WebSharper.MathJax.Sample/WebSharper.MathJax.Sample.fsproj
+++ b/WebSharper.MathJax.Sample/WebSharper.MathJax.Sample.fsproj
@@ -31,7 +31,7 @@
     <Optimize>false</Optimize>
     <Tailcalls>false</Tailcalls>
     <OutputPath>bin</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;ZAFIR</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
