--- a/nuget/WebSharper.MathJax.paket.template
+++ b/nuget/WebSharper.MathJax.paket.template
@@ -1,11 +1,12 @@
 type file
 id WebSharper.MathJax
-authors
-    IntelliFactory
-owners
-    IntelliFactory
-licenseUrl http://websharper.com/licensing
-projectUrl https://github.com/intellifactory/https://github.com/intellifactory/websharper.mathjax
+authors IntelliFactory
+owners IntelliFactory
+projectUrl https://websharper.com/
+repositoryType git
+repositoryUrl https://github.com/dotnet-websharper/mathjax/
+licenseUrl https://github.com/dotnet-websharper/mathjax/blob/master/LICENSE.md
+iconUrl https://github.com/dotnet-websharper/core/raw/websharper50/tools/WebSharper.png
 description
     WebSharper Extensions for MathJax 2.7.1
 tags
