--- a/WebSharper.MathJax.Sample/WebSharper.MathJax.Sample.fsproj
+++ b/WebSharper.MathJax.Sample/WebSharper.MathJax.Sample.fsproj
@@ -1,20 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
+
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <WebSharperProject>Bundle</WebSharperProject>
-    <WebSharperSourceMap>false</WebSharperSourceMap>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
+
   <ItemGroup>
-    <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Client.fs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="../WebSharper.MathJax\WebSharper.MathJax.fsproj" />
+    <Compile Include="Startup.fs" />
+    <None Include="package.json" />
+    <None Include="esbuild.config.mjs" />
+    <None Include="vite.config.js" />
+    <None Include="wsconfig.json" />
   </ItemGroup>
 
-  <Import Project="..\paket-files\wsbuild\github.com\dotnet-websharper\build-script\WebSharper.Fake.targets" Condition="Exists('..\paket-files\wsbuild\github.com\dotnet-websharper\build-script\WebSharper.Fake.targets')" />
-  <Import Project="..\.paket\Paket.Restore.targets" />
+  <ItemGroup>
+    <PackageReference Include="WebSharper" Version="9.1.0.554" />    
+    <PackageReference Include="WebSharper.FSharp" Version="9.1.0.554" />
+    <PackageReference Include="WebSharper.UI" Version="9.1.0.554" />
+    <PackageReference Include="WebSharper.AspNetCore" Version="9.1.0.554" />
+  </ItemGroup>
+
+  <ItemGroup>
+  <Reference Include="WebSharper.MathJax">
+    <HintPath>../WebSharper.MathJax/bin/Debug/netstandard2.0/WebSharper.MathJax.dll</HintPath>
+  </Reference>
+</ItemGroup>
+
+  <Target Name="ESBuildBundle" AfterTargets="WebSharperCompile" Condition=" '$(Configuration)' == 'Release' ">
+    <Exec Command="npm install" />
+    <Exec Command="node ./esbuild.config.mjs" />
+  </Target>
+
 </Project>
