--- a/WebSharper.MathJax/WebSharper.MathJax.fsproj
+++ b/WebSharper.MathJax/WebSharper.MathJax.fsproj
@@ -9,11 +9,11 @@
 	  <Compile Include="MathJaxV3.fs" />
     <Compile Include="Main.fs" />    
   </ItemGroup>
-  <PropertyGroup>
-    <NpmDependencies>
-      <NpmPackage Name="mathjax" Version="gt= 3.0.0 lt 3.3.0" ResolutionStrategy="Max" />
-    </NpmDependencies>
-  </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="WebSharper.MathJax.ConfigResource">
+      <HintPath>..\WebSharper.MathJax.ConfigResource\bin\Debug\netstandard2.0\WebSharper.MathJax.ConfigResource.dll</HintPath>
+    </Reference>
+  </ItemGroup>
   <Import Project="..\paket-files\wsbuild\github.com\dotnet-websharper\build-script\WebSharper.Fake.targets" Condition="Exists('..\paket-files\wsbuild\github.com\dotnet-websharper\build-script\WebSharper.Fake.targets')" />
   <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
