--- a/WebSharper.MathJax.ConfigResource/WebSharper.MathJax.ConfigResource.fsproj
+++ b/WebSharper.MathJax.ConfigResource/WebSharper.MathJax.ConfigResource.fsproj
@@ -10,9 +10,6 @@
     <None Include="wsconfig.json" />
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="WebSharper" Version="9.1.0.554" />    
-    <PackageReference Include="WebSharper.FSharp" Version="9.1.0.554" />
-  </ItemGroup>
-
+  <Import Project="..\paket-files\wsbuild\github.com\dotnet-websharper\build-script\WebSharper.Fake.targets" Condition="Exists('..\paket-files\wsbuild\github.com\dotnet-websharper\build-script\WebSharper.Fake.targets')" />
+  <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
