--- a/WebSharper.MathJax.Sample/WebSharper.MathJax.Sample.fsproj
+++ b/WebSharper.MathJax.Sample/WebSharper.MathJax.Sample.fsproj
@@ -1,9 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <Compile Include="Client.fs" />
     <Compile Include="Startup.fs" />
@@ -12,23 +11,12 @@
     <None Include="vite.config.js" />
     <None Include="wsconfig.json" />
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\WebSharper.MathJax\WebSharper.MathJax.fsproj" />
-    <ProjectReference Include="..\WebSharper.MathJax.ConfigResource\WebSharper.MathJax.ConfigResource.fsproj" />
-    <!-- <Reference Include="WebSharper.MathJax">
-      <HintPath>..\WebSharper.MathJax\bin\Debug\netstandard2.0\WebSharper.MathJax.dll</HintPath>
-    </Reference>
-    <Reference Include="WebSharper.MathJax.ConfigResource">
-      <HintPath>..\WebSharper.MathJax.ConfigResource\bin\Debug\netstandard2.0\WebSharper.MathJax.ConfigResource.dll</HintPath>
-    </Reference> -->
+    <ProjectReference Include="../WebSharper.MathJax/WebSharper.MathJax.fsproj" />
   </ItemGroup>
-
   <Target Name="ESBuildBundle" AfterTargets="WebSharperCompile" Condition=" '$(Configuration)' == 'Release' ">
     <Exec Command="npm install" />
     <Exec Command="node ./esbuild.config.mjs" />
   </Target>
-
   <Import Project="..\.paket\Paket.Restore.targets" />
-
 </Project>
