--- a/WebSharper.MathJax.Sample/WebSharper.MathJax.Sample.fsproj
+++ b/WebSharper.MathJax.Sample/WebSharper.MathJax.Sample.fsproj
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <WebSharperProject>Bundle</WebSharperProject>
-    <WebSharperSourceMap>false</WebSharperSourceMap>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="AssemblyInfo.fs" />
     <Compile Include="Client.fs" />
+    <Compile Include="Startup.fs" />
+    <None Include="package.json" />
+    <None Include="esbuild.config.mjs" />
+    <None Include="vite.config.js" />
+    <None Include="wsconfig.json" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="../WebSharper.MathJax\WebSharper.MathJax.fsproj" />
+    <ProjectReference Include="../WebSharper.MathJax/WebSharper.MathJax.fsproj" />
   </ItemGroup>
-
-  <Import Project="..\paket-files\wsbuild\github.com\dotnet-websharper\build-script\WebSharper.Fake.targets" Condition="Exists('..\paket-files\wsbuild\github.com\dotnet-websharper\build-script\WebSharper.Fake.targets')" />
+  <Target Name="ESBuildBundle" AfterTargets="WebSharperCompile" Condition=" '$(Configuration)' == 'Release' ">
+    <Exec Command="npm install" />
+    <Exec Command="node ./esbuild.config.mjs" />
+  </Target>
   <Import Project="..\.paket\Paket.Restore.targets" />
 </Project>
